# bookshelf

./: .gitignore  Cargo.toml
src/: db.rs  main.rs  models.rs  schema.rs  ui.rs
src/ui/: author_view.rs  book_view.rs  common.rs  messages.rs  mod.rs  state.rs  utils.rs  variables.rs
src/ui/components/: mod.rs  searchable_dropdown.rs
