[package]
name = "bookshelf_app"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.10", features = ["image"] }
diesel = { version = "2.1", features = [
    "sqlite",
    "chrono",
    "returning_clauses_for_sqlite_3_35",
    "r2d2",
] }
r2d2 = "0.8"
libsqlite3-sys = { version = "0.27.0", features = ["bundled"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.4", features = ["v4"] }
once_cell = "1.18"
